Fixed some alignments

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   width: 1400px;
   min-width: 400px;
   min-height: 640px;
-  padding: 40px 50px 10px 50px;
+  padding: 40px 25px 10px 50px;
   margin: 0 auto;
   border-radius: 20px;
 }
